--- a/templates/dev.zookeeper.plist.erb
+++ b/templates/dev.zookeeper.plist.erb
@@ -14,7 +14,7 @@
     <key>ProgramArguments</key>
     <array>
       <string><%= scope.lookupvar "zookeeper::config::executable" %></string>
-      <string>start</string>
+      <string>start-foreground</string>
     </array>
 
     <key>RunAtLoad</key>
