Hiera-ize/Parameterize
 - Since variables are now in-scope, drop to short form of reference in
   both init.pp and templates
 - Remove zookeeper::config class as it is now redundant
 - Update tests to match-ish, despite the fact that they can't run cause
   boxen/cardboard#13

--- a/templates/dev.zookeeper.plist.erb
+++ b/templates/dev.zookeeper.plist.erb
@@ -13,7 +13,7 @@
 
     <key>ProgramArguments</key>
     <array>
-      <string><%= scope.lookupvar "zookeeper::config::executable" %></string>
+      <string><%= @executable %></string>
       <string>start-foreground</string>
     </array>
 
@@ -27,13 +27,13 @@
     <string><%= scope.lookupvar "::boxen_user" %></string>
 
     <key>WorkingDirectory</key>
-    <string><%= scope.lookupvar "zookeeper::config::configdir" %></string>
+    <string><%= @configdir %></string>
 
     <key>StandardErrorPath</key>
-    <string><%= scope.lookupvar "zookeeper::config::logdir" %>/stderr.log</string>
+    <string><%= @logdir %>/stderr.log</string>
 
     <key>StandardOutPath</key>
-    <string><%= scope.lookupvar "zookeeper::config::logdir" %>/stdout.log</string>
+    <string><%= @logdir %>/stdout.log</string>
 
   </dict>
 </plist>
