--- a/templates/env.sh.erb
+++ b/templates/env.sh.erb
@@ -1,3 +1,3 @@
 # Let the env know where zookeeper runs.
 
-export BOXEN_ZOOKEEPER_PORT=<%= scope.lookupvar('zookeeper::config::port') %>
+export BOXEN_ZOOKEEPER_PORT=<%= @port %>
