Encapsulate config, switch to boxen::env_script
Taking cues from boxen/puppet-redis, as in donaldguy/puppet-kafka,
encapsulate the configuration state so that we can ensure whole
presence/absence, and more nicely, use a single notify arrow to
hint the puppet scheduler rather than many individual requires

Also switch to new-school boxen::env_script type rather than just
file, cleaning up after our old self.

--- a/templates/dev.zookeeper.plist.erb
+++ b/templates/dev.zookeeper.plist.erb
@@ -9,6 +9,12 @@
     <dict>
       <key>Description</key>
       <string>Distributed coordination services.</string>
+
+      <key>Host</key>
+      <string><%= @host %></string>
+
+      <key>Port</key>
+      <string><%= @port %></string>
     </dict>
 
     <key>ProgramArguments</key>
